<resources>
    <string name="app_name">Learnfordown</string>
    <string name="qu_quieres_hacer_hoy">¿ QUÉ QUIERES HACER HOY ?</string>
    <string name="qu_quieres_practicar">¿ QUÉ QUIERES PRACTICAR?</string>
    <string name="frases_con_s_labas_directas">¡FRASES CON SÍLABAS DIRECTAS!</string>
    <string name="nivel_1">Nivel 1</string>
    <string name="nivel_2">Nivel 2</string>
    <string name="nivel_3">Nivel 3</string>
    <string name="nivel_4">Nivel 4</string>
    <string name="qu_quieres_practicar1">¿QUÉ QUIERES PRACTICAR?</string>
    <string name="title_activity_writegame_level2_screen">writegame_level2_screen</string>
    <string name="title_activity_prueb">PRUEBA</string>
    <string name="title_activity_loading_screen">Cargando</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_list_users_screen">ListUsers_screen</string>
    <string name="title_activity_listusers_screen">listusers_screen</string>
</resources>
