<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/ic_launcher1"
    android:weightSum="1">



    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_weight="0.15"
        android:weightSum="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button5"
            android:src="@mipmap/icon_backarrow"
            android:background="@color/colorPrimary"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:visibility="visible"
            android:onClick="BackArrow"
            android:scaleType="fitCenter"
            android:layout_weight="0.01" />

        <TextView
            android:text="@string/qu_quieres_practicar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:layout_weight="0.59"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/white" />


        <ImageButton
            android:src="@mipmap/ic_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button7"
            android:onClick="goHome"
            android:layout_weight="0.2"
            android:scaleType="fitCenter"
            android:background="@color/colorPrimary" />

        <ImageButton
            android:src="@mipmap/icon_help"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button6"
            android:layout_weight="0.2"
            android:scaleType="fitCenter"
            android:background="@color/colorPrimary" />


    </LinearLayout>


    <!--LinearLayout
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGame"-->


    <TextView
            android:layout_weight="0.15"
            android:text="@string/frases_con_s_labas_directas"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/textView3"
            android:gravity="center"
            android:textSize="45sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
        android:background="@color/colorGame"/>

    <!--/LinearLayout-->


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@color/Blanco">

        <Button
            android:text="@string/nivel_1"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:background="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:textSize="45sp"
            android:onClick="nivel1"
            android:layout_weight="0.25"
            android:textAlignment="center"
            android:textColor="@color/colorGame" />

        <Button
            android:text="@string/nivel_2"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:background="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:textSize="45sp"
            android:onClick="nivel2"
            android:layout_weight="0.25"
            android:textAlignment="center"
            android:textColor="@color/Verde" />

        <Button
            android:text="@string/nivel_3"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:background="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:textSize="45sp"
            android:onClick="nivel3"
            android:layout_weight="0.25"
            android:textAlignment="center"
            android:textColor="@color/Rojo" />

        <Button
            android:text="@string/nivel_4"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:background="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:textSize="45sp"
            android:onClick="nivel4"
            android:textAlignment="center"
            android:layout_weight="0.25"
            android:textColor="@color/Morado" />
    </LinearLayout>


</LinearLayout>
